<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:context=".MainActivity" />

    <LinearLayout
        android:id="@+id/bottomOfScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/genderImage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/iconName"
            tools:srcCompat="@tools:sample/avatars" />

        <GridLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="1"
            android:padding="3dp"
            android:rowCount="2">

            <TextView
                android:id="@+id/textTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:text="@string/map_welcome_top"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/textBottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_welcome_bottom"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />


        </GridLayout>


    </LinearLayout>

</LinearLayout>